# stoa-of-attalos

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  COMMANDS.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  DOCS_ORGANIZATION.md  FINAL_IMPLEMENTATION_REVIEW.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW.md  LEARNING_SYSTEM_OVERVIEW.md  NEXT_STEPS.md  PORTAL_ALIGNMENT_COMPLETE.md  PORTAL_ALIGNMENT_PLAN.md  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  SESSION_SUMMARY.md  SETUP_SUMMARY.md  TDD_WORKFLOW_CORRECTION.md  UPGRADE_SUMMARY.md  VALIDATION_SCRIPTS.md  alembic.ini  coverage.json  eslint.config.d.ts  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  init-db.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-from-test.md  bug_report.md  feature_request.md  lesson-request.md  refactor-debt.md
.github/workflows/: README.md  ci.yml  pr-size-guard.yml
alembic/: README.md  env.py
docs/: CURRICULUM.md  FULL_STACK_SETUP.md  GLOSSARY.md  IDE_VSCODE_DEVELOPER_GUIDE.md  LEARNING_DEBT.md  NEXT_STEPS.md  PHASE_A.md  PHASE_B.md  PHASE_C.md  POSTGRESQL_MCP_SETUP.md  QUICK_REFERENCE.md  QUICK_START_V2.md  UPGRADES_APPLIED.md  WELCOME.md  student-portal-plan.md
lessons/: START_HERE.md
notes/: windsurf-user-flow.md
scripts/: check-a1s1.sh  check-a1s2.sh  setup.sh  track-learning-debt.sh  verify-setup.sh
teacher/: index.json
tests/: example.test.d.ts  example.test.js  example.test.js.map  example.test.ts
(+112 files in other folders)
